// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Seat > should correspond default layout 1`] = `
<div>
  <button
    class="_seat_357f74"
    type="button"
  />
</div>
`;

exports[`Seat > should support the "isDisabled" prop 1`] = `
<div>
  <button
    class="_seat_357f74 _disabled_357f74"
    type="button"
  />
</div>
`;

exports[`Seat > should support the "isDisabled" prop 2`] = `
<div>
  <button
    class="_seat_357f74"
    type="button"
  />
</div>
`;

exports[`Seat > should support the "isOccupied" prop 1`] = `
<div>
  <button
    class="_seat_357f74 _occupied_357f74"
    disabled=""
    type="button"
  />
</div>
`;

exports[`Seat > should support the "isOccupied" prop 2`] = `
<div>
  <button
    class="_seat_357f74"
    type="button"
  />
</div>
`;

exports[`Seat > should support the "isSelected" prop 1`] = `
<div>
  <button
    class="_seat_357f74 _selected_357f74"
    type="button"
  />
</div>
`;

exports[`Seat > should support the "isSelected" prop 2`] = `
<div>
  <button
    class="_seat_357f74"
    type="button"
  />
</div>
`;
